--- a/debian/control
+++ b/debian/control
@@ -5,5 +5,13 @@ Build-Depends: debhelper (>=9), dh-exec
 
 Package: env-manager
 Architecture: any
-Depends: debhelper, dpkg-dev, git, htop, nmon, vim
+Depends:
+    aptitude,
+    debhelper,
+    dpkg-dev,
+    fcitx,
+    git,
+    htop,
+    nmon,
+    vim
 Description: Manage developer environment.
